# mdbook-test

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh
src/: build_template.rs  lib.rs
tests/: integration_tests.rs
tests/failing/: book.toml
tests/failing/src/: chapter_1.md
tests/passing/: book.toml
tests/passing/src/: chapter_1.md
