[package]
name = "mdbook-test"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
build = "build.rs"

[dependencies]
failure = "0.1.1"
pulldown-cmark = "0.1.0"
serde_json = "1.0.8"
structopt = "0.1.6"
structopt-derive = "0.1.6"
mdbook = { git = "https://github.com/Michael-F-Bryan/mdbook", branch = "alternate_backends" }
tempdir = "0.3.5"
serde = "1.0.25"
serde_derive = "1.0.25"
toml = "0.4.5"

[patch.crates-io.pulldown-cmark]
git = "https://github.com/google/pulldown-cmark"

[build-dependencies]
cargo = "0.23.0"
